--- a/index.html
+++ b/index.html
@@ -1,114 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="node_modules/fusioncharts/fusioncharts.js"></script>
-  <script type="text/javascript">
-    // var FusionCharts = require('fusioncharts');
-    FusionCharts.ready(function () {
-      pie1 = new FusionCharts({
-        id: "stockRealTimeChart",
-        type: 'column2d',
-        renderAt: 'chart-container',
-        width: '600',
-        height: '350',
-        dataFormat: 'json',
-        dataSource: {
-          "chart": {
-            "caption": "Monthly",
-            "xaxisname": "Month",
-            "yaxisname": "Revenue",
-            "numberprefix": "$",
-            "showvalues": "1",
-            "animation": "1"
-          },
-          "data": [
-            {
-              "label": "Jan",
-              "value": "420000"
-            },
-            {
-              "label": "Feb",
-              "value": "910000"
-            },
-            {
-              "label": "Mar",
-              "value": "720000"
-            },
-            {
-              "label": "Apr",
-              "value": "550000"
-            },
-            {
-              "label": "May",
-              "value": "810000"
-            },
-            {
-              "label": "Jun",
-              "value": "510000"
-            },
-            {
-              "label": "Jul",
-              "value": "680000"
-            },
-            {
-              "label": "Aug",
-              "value": "620000"
-            },
-            {
-              "label": "Sep",
-              "value": "610000"
-            },
-            {
-              "label": "Oct",
-              "value": "490000"
-            },
-            {
-              "label": "Nov",
-              "value": "530000"
-            },
-            {
-              "label": "Dec",
-              "value": "330000"
-            }
-          ],
-          "trendlines": [
-            {
-              "line": [
-                {
-                  "startvalue": "700000",
-                  "istrendzone": "1",
-                  "valueonright": "1",
-                  "tooltext": "AYAN",
-                  "endvalue": "900000",
-                  "color": "009933",
-                  "displayvalue": "Target",
-                  "showontop": "1",
-                  "thickness": "5"
-                }
-              ]
-            }
-          ],
-          "styles": {
-            "definition": [
-              {
-                "name": "CanvasAnim",
-                "type": "animation",
-                "param": "_xScale",
-                "start": "0",
-                "duration": "1"
-              }
-            ],
-            "application": [
-              {
-                "toobject": "Canvas",
-                "styles": "CanvasAnim"
-              }
-            ]
-          }
-        }
-      }).render();
-    });
-  </script>
+  <script src="./dist/bundle.js"></script>
 </head>
 <body bgcolor="000000">
     <div id="chart-container"></div>
