Made parcel working using index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="./dist/renderer.js"></script>
+  <script src="./src/renderer.js"></script>
 </head>
 <body bgcolor="000000">
     <div id="chart-container"></div>
