--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="./src/renderer.js"></script>
+  <!-- <script src="./src/renderer.js"></script> -->
+  <script src="./dist/bundle.js"></script>
 </head>
 <body bgcolor="000000">
     <div id="chart-container"></div>
