--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- <script src="./src/renderer.js"></script> -->
   <script src="./dist/bundle.js"></script>
+  <!-- <script src="./node_modules/steal/steal.js" main="./src/renderer.js"></script> -->
 </head>
 <body bgcolor="000000">
     <div id="chart-container"></div>
