--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="./dist/bundle.js"></script>
   <!-- <script src="./node_modules/steal/steal.js" main="./src/renderer.js"></script> -->
 </head>
-<body bgcolor="000000">
+<body bgcolor="">
     <div id="chart-container"></div>
 </body>
 </html>
